--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,33 +8,4 @@
 </div>
 
 
-<div class="mx-auto max-w-2xl">
-  <div class="relative">
-    <label for="name" class="absolute -top-2 left-2 inline-block bg-white px-1 text-xs font-medium text-gray-900">Name</label>
-    <input type="text" name="name" id="name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" placeholder="Jane Smith">
-  </div>
-</div>
-
-<app-articles></app-articles>
-
-
-
-
-<!-- Pagination -->
-<nav class="flex items-center max-w-4xl justify-between border-t border-gray-200 bg-white mx-auto mb-24 px-4 py-3 sm:px-6" aria-label="Pagination">
-  <div class="hidden sm:block">
-    <p class="text-sm text-gray-700">
-      Showing
-      <span class="font-medium">1</span>
-      to
-      <span class="font-medium">10</span>
-      of
-      <span class="font-medium">20</span>
-      results
-    </p>
-  </div>
-  <div class="flex flex-1 justify-between sm:justify-end">
-    <a href="#" class="relative inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus-visible:outline-offset-0">Previous</a>
-    <a href="#" class="relative ml-3 inline-flex items-center rounded-md bg-white px-3 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus-visible:outline-offset-0">Next</a>
-  </div>
-</nav>
+<router-outlet></router-outlet>
