--- a/src/app/article-detail/article-detail.component.html
+++ b/src/app/article-detail/article-detail.component.html
@@ -1,1 +1,7 @@
-<p>article-detail works!</p>
+<!-- article detail -->
+<div *ngIf="article" class="bg-white mx-auto max-w-2xl my-8">
+    <div class="bg-white shadow-sm ring-1 ring-gray-900/5 sm:rounded-xl px-4 py-5">
+        <h3 class="text-base font-semibold leading-6 text-gray-900">{{article.title}}</h3>
+        <p class="mt-1 text-sm text-gray-500">{{article.DOI}}</p>
+    </div>
+</div>
